# IT3190-Capstone

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: PRD.md  implementation_plan.md  improve_plan.md
models/: artist_graph.joblib  cluster_scaler.joblib  confusion_matrix.npy  feature_columns.joblib  feature_scaler.joblib  final_metrics.json  kmeans_model.joblib  label_encoder.joblib  nlp_pca.joblib  poly_features.joblib  selected_features.json  svd_reducer.joblib  tfidf_vectorizer.joblib
notebooks/: 02_model_comparison.ipynb  build_comparison_notebook.py  build_final_notebook.py  complete_visualizations.py  fix_shap.py  fix_visualizations.py  inject_outputs.py  run_comparison_fixed.py  run_extended_models.py  run_final_pipeline.py  run_models_fast.py  run_phase2_ensembles.py  run_pipeline.py
outputs/model_comparison/: best_model_report.txt  predictions.npz  results.json
scripts/: run_phase1.py  run_phase2.py  run_phase3.py  run_phase3_consolidated.py
src/: __init__.py  config.py
src/data/: __init__.py  database.py  genre_mapping.py  loader.py  preprocessor.py
src/deployment/: __init__.py
src/features/: __init__.py  cluster_features.py  feature_selection.py  graph_features.py  interaction_features.py  nlp_features.py
src/models/: __init__.py  inference.py  train.py
src/ui/: app.py
src/utils/: __init__.py  helpers.py
src2/: __init__.py  config.py
src2/data/: __init__.py  data_cleaner.py  data_loader.py  label_converter.py  label_encoder.py
src2/features/: __init__.py  audio_deeplearning.py  audio_traditional.py  feature_reducer.py  (+2 more)
(+11 files in other folders)
